fixed hover text spacing on web view

--- a/src/App.css
+++ b/src/App.css
@@ -504,6 +504,10 @@ h4 {
     margin-top: 24px;
   }
 
+  .hoverText p {
+    margin-bottom: 1em;
+  }
+
   .scrollTop {
     position: fixed;
     width: 100%;
